# cactus-hampster

./: .gitignore  CLAUDE.md  PR_BREAKDOWN.md  README.md  ROADMAP.md  STEPS_TO_POC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/controller/: index.html  package.json  vite.config.ts
apps/controller/src/: App.css  App.tsx
apps/controller/src/components/: GameController.tsx  JoinScreen.tsx  WaitingScreen.tsx
apps/controller/src/hook/: useControllerWebSocket.ts
apps/controller/src/tests/: test-proto.ts
apps/host/: package.json  vite.config.ts
apps/host/src/: App.css  App.tsx  index.css
apps/host/src/components/: Lobby.tsx
apps/host/src/components/games/SpaceBattle/: GameCanvas.tsx  SpaceBattleGame.tsx  physics.ts  types.ts
apps/host/src/hook/: useHostWebSocket.ts  usePingWebsocket.ts
docs/decisions/: 0001-serialization-format.md
proto/controller-types/: controller_types_v1.proto
proto/host-types/: host_types_v1.proto
server/: .gitignore  Cargo.toml
server/crates/model/: Cargo.toml
server/crates/model/src/: lib.rs  local_types.rs  shared.rs
server/crates/model/src/shared/: common_types.rs  controller_types.rs  host_types.rs
server/crates/proto-rs/: Cargo.toml  build.rs
server/crates/proto-rs/src/: lib.rs
server/crates/server/: Cargo.toml
server/crates/server/src/: config.rs  handler.rs  lib.rs  main.rs  router.rs  state.rs
server/crates/server/src/handler/: controller.rs  host.rs  mod.rs
