[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "^0.8.8", features = ["ws"] }
tokio = { version = "^1.50.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tower-http = { version = "^0.6", features = ["full"] }
dotenvy = "0.15.7"
model = { path = "../model" }
